Closed Bug 962600 Opened 10 years ago Closed 10 years ago

don't spam error messages about DOM storage failing to create keys

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: froydnj, Assigned: froydnj)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

      No description provided.
It's not uncommon to see warnings like:

12:45:43     INFO -  [Parent 1888] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x8000FFFF: file c:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/dom/src/storage/DOMStorageManager.cpp, line 460
12:45:43     INFO -  [Parent 1888] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x8000FFFF: file c:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/dom/base/nsGlobalWindow.cpp, line 10868

in mochitest logs.  You can also see quite a few if you use a debug build to open
a profile with a fair number of tabs.

The failures come from CreateScopeKey, which commonly fails at two different points,
with a principal with no URI:

http://mxr.mozilla.org/mozilla-central/source/dom/src/storage/DOMStorageManager.cpp#138

I guess this happens when we start up a docshell and storage gets initialized before
the docshell has started loading stuff?

The other failure point is with a URL with an empty host (like about:blank) that
eventually gets passed to CreateReversedDomain, which complains:

http://mxr.mozilla.org/mozilla-central/source/dom/src/storage/DOMStorageManager.cpp#144
http://mxr.mozilla.org/mozilla-central/source/dom/src/storage/DOMStorageManager.cpp#73

Neither of these seem worth complaining about.
Attachment #8363682 - Flags: review?(bzbarsky)
> which commonly fails at two different points, with a principal with no URI:

That means the system principal.
Comment on attachment 8363682 [details] [diff] [review]
don't spam error messages about DOM storage failing to create keys

r=me
Attachment #8363682 - Flags: review?(bzbarsky) → review+
(In reply to Boris Zbarsky [:bz] from comment #2)
> > which commonly fails at two different points, with a principal with no URI:
> 
> That means the system principal.

about:blank has a different principal than the system principal?
Assignee: nobody → nfroyd
> about:blank has a different principal than the system principal?

about:blank inherits its loader principal.  So it could have the system principal some random web page principal, or if it was loaded on its own a nonce principal.
https://hg.mozilla.org/mozilla-central/rev/77d12c62e7ed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Whiteboard: [qa-]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: