Bug 962600 - don't spam error messages about DOM storage failing to create keys; r=bz